.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:00:23 **** Incremental Build of configuration Debug for project TP_2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ArrayPassenger.o" "..\\src\\ArrayPassenger.c" 
In file included from ..\src\ArrayPassenger.c:14:
..\src\utn.h: In function 'addPassenger':
..\src\utn.h:45:5: error: redefinition of parameter 'cantidadPasajerosActivo'
   45 | int cantidadPasajerosActivo(Passenger *list, int len);
      |     ^~~~~~~~~~~~~~~~~~~~~~~
In file included from ..\src\ArrayPassenger.c:13:
..\src\menus.h:19:5: note: previous definition of 'cantidadPasajerosActivo' was here
   19 | int cantidadPasajerosActivo(Passenger* list, int len);
      |     ^~~~~~~~~~~~~~~~~~~~~~~
In file included from ..\src\ArrayPassenger.c:14:
..\src\utn.h:53:5: error: redefinition of parameter 'informePrecios'
   53 | int informePrecios(Passenger *list, int len);
      |     ^~~~~~~~~~~~~~
In file included from ..\src\ArrayPassenger.c:13:
..\src\menus.h:23:5: note: previous definition of 'informePrecios' was here
   23 | int informePrecios(Passenger* list, int len);
      |     ^~~~~~~~~~~~~~
..\src\ArrayPassenger.c:17:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
   17 | {
      | ^
..\src\ArrayPassenger.c:30:147: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
   30 | int addPassenger(Passenger *list, int len, int id, char name[], char lastName[], float price, int typePassenger, int statusFlight, char flycode[]){
      |                                                                                                                                                   ^
..\src\ArrayPassenger.c:50:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
   50 | {
      | ^
..\src\ArrayPassenger.c:96:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
   96 | {
      | ^
..\src\ArrayPassenger.c:111:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  111 | {
      | ^
..\src\ArrayPassenger.c:131:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  131 | {
      | ^
..\src\ArrayPassenger.c:168:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  168 | {
      | ^
..\src\ArrayPassenger.c:232:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  232 | {
      | ^
..\src\ArrayPassenger.c:251:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  251 | {
      | ^
..\src\ArrayPassenger.c:269:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  269 | {
      | ^
..\src\ArrayPassenger.c:304:39: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  304 | void showPassengerData(Passenger list){
      |                                       ^
..\src\ArrayPassenger.c:316:60: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  316 | int cargaForzada(Passenger* list, int len, int* contadorId){
      |                                                            ^
In file included from ..\src\ArrayPassenger.c:12:
..\src\ArrayPassenger.h:47:5: error: old-style parameter declarations in prototyped function definition
   47 | int addPassenger(Passenger *list, int len, int id, char name[], char lastName[], float price, int typePassenger, int statusFlight, char flycode[])
      |     ^~~~~~~~~~~~
..\src\ArrayPassenger.c:348: error: expected '{' at end of input
..\src\ArrayPassenger.c:344:1: warning: control reaches end of non-void function [-Wreturn-type]
  344 | }
      | ^
19:01:33 **** Incremental Build of configuration Debug for project TP_2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\menus.o" "..\\src\\menus.c" 
In file included from ..\src\menus.c:14:
..\src\menus.h: In function 'addPassenger':
..\src\menus.h:19:5: error: redefinition of parameter 'cantidadPasajerosActivo'
   19 | int cantidadPasajerosActivo(Passenger* list, int len);
      |     ^~~~~~~~~~~~~~~~~~~~~~~
In file included from ..\src\menus.c:13:
..\src\utn.h:45:5: note: previous definition of 'cantidadPasajerosActivo' was here
   45 | int cantidadPasajerosActivo(Passenger *list, int len);
      |     ^~~~~~~~~~~~~~~~~~~~~~~
In file included from ..\src\menus.c:14:
..\src\menus.h:23:5: error: redefinition of parameter 'informePrecios'
   23 | int informePrecios(Passenger* list, int len);
      |     ^~~~~~~~~~~~~~
In file included from ..\src\menus.c:13:
..\src\utn.h:53:5: note: previous definition of 'informePrecios' was here
   53 | int informePrecios(Passenger *list, int len);
      |     ^~~~~~~~~~~~~~
..\src\menus.c:20:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
   20 | {
      | ^
..\src\menus.c:34:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
   34 | {
      | ^
..\src\menus.c:85:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
   85 | {
      | ^
..\src\menus.c:104:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  104 | {
      | ^
..\src\menus.c:127:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  127 | {
      | ^
..\src\menus.c:144:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  144 | {
      | ^
..\src\menus.c:162:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  162 | {
      | ^
..\src\menus.c:192:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  192 | {
      | ^
..\src\menus.c:212:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
  212 | {
      | ^
In file included from ..\src\menus.c:12:
..\src\ArrayPassenger.h:47:5: error: old-style parameter declarations in prototyped function definition
   47 | int addPassenger(Passenger *list, int len, int id, char name[], char lastName[], float price, int typePassenger, int statusFlight, char flycode[])
      |     ^~~~~~~~~~~~
..\src\menus.c:271: error: expected '{' at end of input
..\src\menus.c:268:1: warning: control reaches end of non-void function [-Wreturn-type]
  268 | }
      | ^
